# event-manager

./: .gitignore  CMakeLists.txt  ConnectAcceptor.hpp  ControlThread.cpp  ControlThread.hpp  Event.hpp  Lock.cpp  Lock.hpp  Message.cpp  Message.hpp  MessageList.hpp  Module.hpp  Pipe.cpp  Pipe.hpp  README.md  Task.cpp  Task.hpp  Worker.cpp  Worker.hpp  pipe.hpp  switch.hpp  switch_impl.hpp  task.hpp
tests/: ControlThreadTest.cpp  TestUtilities.hpp  basic.cpp  event.cpp  lock.cpp  pipe.cpp  task.cpp  test_main.cpp  test_utils.hpp  worker.cpp
